tests/2d/numpy/modulo.py.exp
array([[0, 1, 2],
       [0, 0, 2]], dtype=uint8)
array([[0, 1, 2],
       [0, 0, 2]], dtype=int16)
array([[0, 1, 2],
       [0, 0, 2]], dtype=uint16)
array([[0, 1, 2],
       [0, 0, 2]], dtype=int16)
array([[0.0, 1.0, 2.0],
       [0.0, 0.0, 2.0]], dtype=float64)
array([[0, 1, 2],
       [0, 0, 2]], dtype=int16)
array([[0, 1, 2],
       [0, 0, 2]], dtype=int8)
array([[0, 1, 2],
       [0, 0, 2]], dtype=int16)
array([[0, 1, 2],
       [0, 0, 2]], dtype=int16)
array([[0.0, 1.0, 2.0],
       [0.0, 0.0, 2.0]], dtype=float64)
array([[0, 1, 2],
       [0, 0, 2]], dtype=uint16)
array([[0.0, 1.0, 2.0],
       [0.0, 0.0, 2.0]], dtype=float64)
array([[0, 1, 2],
       [0, 0, 2]], dtype=uint16)
array([[0.0, 1.0, 2.0],
       [0.0, 0.0, 2.0]], dtype=float64)
array([[0.0, 1.0, 2.0],
       [0.0, 0.0, 2.0]], dtype=float64)
array([[0, 1, 2],
       [0, 0, 2]], dtype=int16)
array([[0, 1, 2],
       [0, 0, 2]], dtype=int16)
array([[0.0, 1.0, 2.0],
       [0.0, 0.0, 2.0]], dtype=float64)
array([[0, 1, 2],
       [0, 0, 2]], dtype=int16)
array([[0.0, 1.0, 2.0],
       [0.0, 0.0, 2.0]], dtype=float64)
array([[0.0, 1.0, 2.0],
       [0.0, 0.0, 2.0]], dtype=float64)
array([[0.0, 1.0, 2.0],
       [0.0, 0.0, 2.0]], dtype=float64)
array([[0.0, 1.0, 2.0],
       [0.0, 0.0, 2.0]], dtype=float64)
array([[0.0, 1.0, 2.0],
       [0.0, 0.0, 2.0]], dtype=float64)
array([[0.0, 1.0, 2.0],
       [0.0, 0.0, 2.0]], dtype=float64)

==============================
inplace modulo
==============================

array([[0, 1, 2],
       [0, 0, 2]], dtype=uint8)
array([[0, 1, 2],
       [0, 0, 2]], dtype=uint8)
array([[0, 1, 2],
       [0, 0, 2]], dtype=uint8)
array([[0, 1, 2],
       [0, 0, 2]], dtype=uint8)
TypeError
array([[0, 1, 2],
       [0, 0, 2]], dtype=int8)
array([[0, 1, 2],
       [0, 0, 2]], dtype=int8)
array([[0, 1, 2],
       [0, 0, 2]], dtype=int8)
array([[0, 1, 2],
       [0, 0, 2]], dtype=int8)
TypeError
array([[0, 1, 2],
       [0, 0, 2]], dtype=uint16)
array([[0, 1, 2],
       [0, 0, 2]], dtype=uint16)
array([[0, 1, 2],
       [0, 0, 2]], dtype=uint16)
array([[0, 1, 2],
       [0, 0, 2]], dtype=uint16)
TypeError
array([[0, 1, 2],
       [0, 0, 2]], dtype=int16)
array([[0, 1, 2],
       [0, 0, 2]], dtype=int16)
array([[0, 1, 2],
       [0, 0, 2]], dtype=int16)
array([[0, 1, 2],
       [0, 0, 2]], dtype=int16)
TypeError
array([[0.0, 1.0, 2.0],
       [0.0, 0.0, 2.0]], dtype=float64)
array([[0.0, 1.0, 2.0],
       [0.0, 0.0, 2.0]], dtype=float64)
array([[0.0, 1.0, 2.0],
       [0.0, 0.0, 2.0]], dtype=float64)
array([[0.0, 1.0, 2.0],
       [0.0, 0.0, 2.0]], dtype=float64)
array([[0.0, 1.0, 2.0],
       [0.0, 0.0, 2.0]], dtype=float64)

==============================
regression tests
==============================

array([0, 1, 2, 0, 0, 2], dtype=uint16)
array([1, 1, 1], dtype=uint8)
array([1, 1, 1], dtype=int8)
array([1, 1, 1], dtype=uint16)
array([1.5, 1.5, 1.5], dtype=float64)
